Backend-fase2/source/analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> ENTRADAS
Rule 2     INICIO -> <empty>
Rule 3     ENTRADAS -> ENTRADAS ENTRADA
Rule 4     ENTRADAS -> ENTRADA
Rule 5     ENTRADA -> IMPRIMIR puntoYcoma
Rule 6     ENTRADA -> IF puntoYcoma
Rule 7     ENTRADA -> WHILE puntoYcoma
Rule 8     ENTRADA -> BREAK
Rule 9     ENTRADA -> CONTINUE
Rule 10    ENTRADA -> FOR puntoYcoma
Rule 11    ENTRADA -> INCREMENTO puntoYcoma
Rule 12    ENTRADA -> DECREMENTO puntoYcoma
Rule 13    ENTRADA -> FUNC puntoYcoma
Rule 14    ENTRADA -> STRUCT puntoYcoma
Rule 15    ENTRADA -> LLAMADA_FUNCION puntoYcoma
Rule 16    ENTRADA -> RETURN
Rule 17    ENTRADA -> FUNCION_PUSH puntoYcoma
Rule 18    FUNC -> fn id p_Abre PARAMETROS_DECLA_FUNC p_Cierra llave_Abre ENTRADAS llave_Cierra
Rule 19    FUNC -> fn id p_Abre p_Cierra llave_Abre ENTRADAS llave_Cierra
Rule 20    FUNC -> fn id p_Abre PARAMETROS_DECLA_FUNC p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
Rule 21    FUNC -> fn id p_Abre p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
Rule 22    PARAMETROS_DECLA_FUNC -> PARAMETROS_DECLA_FUNC coma PARAMETRO_DECLA_FUNC
Rule 23    PARAMETROS_DECLA_FUNC -> PARAMETRO_DECLA_FUNC
Rule 24    PARAMETRO_DECLA_FUNC -> id dosPuntos TIPO
Rule 25    PARAMETRO_DECLA_FUNC -> id dosPuntos TIPO c_Abre c_Cierra
Rule 26    EXPRESION -> LLAMADA_FUNCION
Rule 27    LLAMADA_FUNCION -> id p_Abre PARAMETROS_LLAMA_FUNC p_Cierra
Rule 28    LLAMADA_FUNCION -> id p_Abre p_Cierra
Rule 29    PARAMETROS_LLAMA_FUNC -> EXPRESION
Rule 30    PARAMETROS_LLAMA_FUNC -> PARAMETROS_LLAMA_FUNC coma EXPRESION
Rule 31    STRUCT -> interface id llave_Abre LISTAATRIBUTOS llave_Cierra
Rule 32    LISTAATRIBUTOS -> LISTAATRIBUTOS id dosPuntos TIPO puntoYcoma
Rule 33    LISTAATRIBUTOS -> LISTAATRIBUTOS id puntoYcoma
Rule 34    LISTAATRIBUTOS -> id dosPuntos TIPO puntoYcoma
Rule 35    LISTAATRIBUTOS -> id puntoYcoma
Rule 36    FOR -> for p_Abre DECLARACION puntoYcoma EXPRESION puntoYcoma FORITERADOR p_Cierra llave_Abre ENTRADAS llave_Cierra
Rule 37    FOR -> for p_Abre DECLARACION of EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra
Rule 38    FORITERADOR -> ASIGNACION
Rule 39    FORITERADOR -> INCREMENTO
Rule 40    FORITERADOR -> DECREMENTO
Rule 41    BREAK -> break puntoYcoma
Rule 42    CONTINUE -> continue puntoYcoma
Rule 43    RETURN -> return EXPRESION puntoYcoma
Rule 44    RETURN -> return puntoYcoma
Rule 45    WHILE -> while p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra
Rule 46    IF -> if p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra COMPLEMENTO_IF
Rule 47    IF -> if p_Abre EXPRESION p_Cierra llave_Abre llave_Cierra COMPLEMENTO_IF
Rule 48    COMPLEMENTO_IF -> else IF
Rule 49    COMPLEMENTO_IF -> else llave_Abre ENTRADAS llave_Cierra
Rule 50    COMPLEMENTO_IF -> <empty>
Rule 51    ENTRADA -> DECLARACION puntoYcoma
Rule 52    DECLARACION -> let id igual EXPRESION
Rule 53    DECLARACION -> let id dosPuntos TIPO igual EXPRESION
Rule 54    DECLARACION -> let id
Rule 55    DECLARACION -> let id dosPuntos TIPO
Rule 56    DECLARACION -> let id dosPuntos TIPO c_Abre c_Cierra igual EXPRESION
Rule 57    DECLARACION -> let id dosPuntos TIPO c_Abre c_Cierra
Rule 58    ENTRADA -> ASIGNACION puntoYcoma
Rule 59    ASIGNACION -> id igual EXPRESION
Rule 60    ASIGNACION -> id LISTAINDICES igual EXPRESION
Rule 61    INCREMENTO -> id incremento
Rule 62    DECREMENTO -> id decremento
Rule 63    IMPRIMIR -> console punto log p_Abre LISTAEXPRESIONES p_Cierra
Rule 64    LISTAEXPRESIONES -> LISTAEXPRESIONES coma EXPRESION
Rule 65    LISTAEXPRESIONES -> EXPRESION
Rule 66    LISTAINDICES -> LISTAINDICES c_Abre EXPRESION c_Cierra
Rule 67    LISTAINDICES -> c_Abre EXPRESION c_Cierra
Rule 68    EXPRESION -> EXPRESION suma EXPRESION
Rule 69    EXPRESION -> EXPRESION resta EXPRESION
Rule 70    EXPRESION -> EXPRESION multiplicacion EXPRESION
Rule 71    EXPRESION -> EXPRESION division EXPRESION
Rule 72    EXPRESION -> EXPRESION potencia EXPRESION
Rule 73    EXPRESION -> EXPRESION modulo EXPRESION
Rule 74    EXPRESION -> resta EXPRESION
Rule 75    EXPRESION -> p_Abre EXPRESION p_Cierra
Rule 76    EXPRESION -> EXPRESION and EXPRESION
Rule 77    EXPRESION -> EXPRESION or EXPRESION
Rule 78    EXPRESION -> not EXPRESION
Rule 79    EXPRESION -> EXPRESION mayor EXPRESION
Rule 80    EXPRESION -> EXPRESION mayorigual EXPRESION
Rule 81    EXPRESION -> EXPRESION menor EXPRESION
Rule 82    EXPRESION -> EXPRESION menorigual EXPRESION
Rule 83    EXPRESION -> EXPRESION igualacion EXPRESION
Rule 84    EXPRESION -> EXPRESION diferente EXPRESION
Rule 85    EXPRESION -> EXPRESION igualacionNormal EXPRESION
Rule 86    EXPRESION -> EXPRESION diferenteNormal EXPRESION
Rule 87    EXPRESION -> FUNCION_TOFIXED
Rule 88    EXPRESION -> FUNCION_TOEXPONENTIAL
Rule 89    EXPRESION -> FUNCION_TOSTRING
Rule 90    EXPRESION -> FUNCION_TOLOWERCASE
Rule 91    EXPRESION -> FUNCION_TOUPPERCASE
Rule 92    EXPRESION -> FUNCION_SPLIT
Rule 93    EXPRESION -> FUNCION_CONCAT
Rule 94    EXPRESION -> FUNCION_TYPEOF
Rule 95    EXPRESION -> FUNCION_PUSH
Rule 96    FUNCION_TOFIXED -> id punto toFixed p_Abre EXPRESION p_Cierra
Rule 97    FUNCION_PUSH -> id punto push p_Abre EXPRESION p_Cierra
Rule 98    FUNCION_TOEXPONENTIAL -> id punto toExponential p_Abre EXPRESION p_Cierra
Rule 99    FUNCION_TOSTRING -> id punto toString p_Abre p_Cierra
Rule 100   FUNCION_TOLOWERCASE -> id punto toLowerCase p_Abre p_Cierra
Rule 101   FUNCION_TOUPPERCASE -> id punto toUpperCase p_Abre p_Cierra
Rule 102   FUNCION_SPLIT -> id punto split p_Abre EXPRESION p_Cierra
Rule 103   FUNCION_CONCAT -> id punto concat p_Abre LISTAEXPRESIONES p_Cierra
Rule 104   FUNCION_TYPEOF -> typeof p_Abre EXPRESION p_Cierra
Rule 105   EXPRESION -> cadena
Rule 106   EXPRESION -> numero
Rule 107   EXPRESION -> true
Rule 108   EXPRESION -> false
Rule 109   EXPRESION -> null
Rule 110   EXPRESION -> id
Rule 111   EXPRESION -> length p_Abre EXPRESION p_Cierra
Rule 112   EXPRESION -> id LISTAINDICES
Rule 113   EXPRESION -> c_Abre LISTAEXPRESIONES c_Cierra
Rule 114   EXPRESION -> TIPO p_Abre EXPRESION p_Cierra
Rule 115   TIPO -> number
Rule 116   TIPO -> string
Rule 117   TIPO -> stringMayus
Rule 118   TIPO -> boolean
Rule 119   TIPO -> any

Terminals, with rules where they appear

and                  : 76
any                  : 119
boolean              : 118
break                : 41
c_Abre               : 25 56 57 66 67 113
c_Cierra             : 25 56 57 66 67 113
cadena               : 105
coma                 : 22 30 64
concat               : 103
console              : 63
continue             : 42
decremento           : 62
diferente            : 84
diferenteNormal      : 86
division             : 71
dosPuntos            : 20 21 24 25 32 34 53 55 56 57
else                 : 48 49
error                : 
false                : 108
fn                   : 18 19 20 21
for                  : 36 37
id                   : 18 19 20 21 24 25 27 28 31 32 33 34 35 52 53 54 55 56 57 59 60 61 62 96 97 98 99 100 101 102 103 110 112
if                   : 46 47
igual                : 52 53 56 59 60
igualacion           : 83
igualacionNormal     : 85
incremento           : 61
interface            : 31
length               : 111
let                  : 52 53 54 55 56 57
llave_Abre           : 18 19 20 21 31 36 37 45 46 47 49
llave_Cierra         : 18 19 20 21 31 36 37 45 46 47 49
log                  : 63
mayor                : 79
mayorigual           : 80
menor                : 81
menorigual           : 82
modulo               : 73
multiplicacion       : 70
not                  : 78
null                 : 109
number               : 115
numero               : 106
of                   : 37
or                   : 77
p_Abre               : 18 19 20 21 27 28 36 37 45 46 47 63 75 96 97 98 99 100 101 102 103 104 111 114
p_Cierra             : 18 19 20 21 27 28 36 37 45 46 47 63 75 96 97 98 99 100 101 102 103 104 111 114
potencia             : 72
punto                : 63 96 97 98 99 100 101 102 103
puntoYcoma           : 5 6 7 10 11 12 13 14 15 17 32 33 34 35 36 36 41 42 43 44 51 58
push                 : 97
resta                : 69 74
return               : 43 44
split                : 102
string               : 116
stringMayus          : 117
suma                 : 68
toExponential        : 98
toFixed              : 96
toLowerCase          : 100
toString             : 99
toUpperCase          : 101
true                 : 107
typeof               : 104
while                : 45

Nonterminals, with rules where they appear

ASIGNACION           : 38 58
BREAK                : 8
COMPLEMENTO_IF       : 46 47
CONTINUE             : 9
DECLARACION          : 36 37 51
DECREMENTO           : 12 40
ENTRADA              : 3 4
ENTRADAS             : 1 3 18 19 20 21 36 37 45 46 49
EXPRESION            : 29 30 36 37 43 45 46 47 52 53 56 59 60 64 65 66 67 68 68 69 69 70 70 71 71 72 72 73 73 74 75 76 76 77 77 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 96 97 98 102 104 111 114
FOR                  : 10
FORITERADOR          : 36
FUNC                 : 13
FUNCION_CONCAT       : 93
FUNCION_PUSH         : 17 95
FUNCION_SPLIT        : 92
FUNCION_TOEXPONENTIAL : 88
FUNCION_TOFIXED      : 87
FUNCION_TOLOWERCASE  : 90
FUNCION_TOSTRING     : 89
FUNCION_TOUPPERCASE  : 91
FUNCION_TYPEOF       : 94
IF                   : 6 48
IMPRIMIR             : 5
INCREMENTO           : 11 39
INICIO               : 0
LISTAATRIBUTOS       : 31 32 33
LISTAEXPRESIONES     : 63 64 103 113
LISTAINDICES         : 60 66 112
LLAMADA_FUNCION      : 15 26
PARAMETROS_DECLA_FUNC : 18 20 22
PARAMETROS_LLAMA_FUNC : 27 30
PARAMETRO_DECLA_FUNC : 22 23
RETURN               : 16
STRUCT               : 14
TIPO                 : 20 21 24 25 32 34 53 55 56 57 114
WHILE                : 7

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . ENTRADAS
    (2) INICIO -> .
    (3) ENTRADAS -> . ENTRADAS ENTRADA
    (4) ENTRADAS -> . ENTRADA
    (5) ENTRADA -> . IMPRIMIR puntoYcoma
    (6) ENTRADA -> . IF puntoYcoma
    (7) ENTRADA -> . WHILE puntoYcoma
    (8) ENTRADA -> . BREAK
    (9) ENTRADA -> . CONTINUE
    (10) ENTRADA -> . FOR puntoYcoma
    (11) ENTRADA -> . INCREMENTO puntoYcoma
    (12) ENTRADA -> . DECREMENTO puntoYcoma
    (13) ENTRADA -> . FUNC puntoYcoma
    (14) ENTRADA -> . STRUCT puntoYcoma
    (15) ENTRADA -> . LLAMADA_FUNCION puntoYcoma
    (16) ENTRADA -> . RETURN
    (17) ENTRADA -> . FUNCION_PUSH puntoYcoma
    (51) ENTRADA -> . DECLARACION puntoYcoma
    (58) ENTRADA -> . ASIGNACION puntoYcoma
    (63) IMPRIMIR -> . console punto log p_Abre LISTAEXPRESIONES p_Cierra
    (46) IF -> . if p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra COMPLEMENTO_IF
    (47) IF -> . if p_Abre EXPRESION p_Cierra llave_Abre llave_Cierra COMPLEMENTO_IF
    (45) WHILE -> . while p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra
    (41) BREAK -> . break puntoYcoma
    (42) CONTINUE -> . continue puntoYcoma
    (36) FOR -> . for p_Abre DECLARACION puntoYcoma EXPRESION puntoYcoma FORITERADOR p_Cierra llave_Abre ENTRADAS llave_Cierra
    (37) FOR -> . for p_Abre DECLARACION of EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra
    (61) INCREMENTO -> . id incremento
    (62) DECREMENTO -> . id decremento
    (18) FUNC -> . fn id p_Abre PARAMETROS_DECLA_FUNC p_Cierra llave_Abre ENTRADAS llave_Cierra
    (19) FUNC -> . fn id p_Abre p_Cierra llave_Abre ENTRADAS llave_Cierra
    (20) FUNC -> . fn id p_Abre PARAMETROS_DECLA_FUNC p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
    (21) FUNC -> . fn id p_Abre p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
    (31) STRUCT -> . interface id llave_Abre LISTAATRIBUTOS llave_Cierra
    (27) LLAMADA_FUNCION -> . id p_Abre PARAMETROS_LLAMA_FUNC p_Cierra
    (28) LLAMADA_FUNCION -> . id p_Abre p_Cierra
    (43) RETURN -> . return EXPRESION puntoYcoma
    (44) RETURN -> . return puntoYcoma
    (97) FUNCION_PUSH -> . id punto push p_Abre EXPRESION p_Cierra
    (52) DECLARACION -> . let id igual EXPRESION
    (53) DECLARACION -> . let id dosPuntos TIPO igual EXPRESION
    (54) DECLARACION -> . let id
    (55) DECLARACION -> . let id dosPuntos TIPO
    (56) DECLARACION -> . let id dosPuntos TIPO c_Abre c_Cierra igual EXPRESION
    (57) DECLARACION -> . let id dosPuntos TIPO c_Abre c_Cierra
    (59) ASIGNACION -> . id igual EXPRESION
    (60) ASIGNACION -> . id LISTAINDICES igual EXPRESION

    $end            reduce using rule 2 (INICIO -> .)
    console         shift and go to state 19
    if              shift and go to state 20
    while           shift and go to state 21
    break           shift and go to state 22
    continue        shift and go to state 23
    for             shift and go to state 24
    id              shift and go to state 25
    fn              shift and go to state 26
    interface       shift and go to state 27
    return          shift and go to state 28
    let             shift and go to state 29

    INICIO                         shift and go to state 1
    ENTRADAS                       shift and go to state 2
    ENTRADA                        shift and go to state 3
    IMPRIMIR                       shift and go to state 4
    IF                             shift and go to state 5
    WHILE                          shift and go to state 6
    BREAK                          shift and go to state 7
    CONTINUE                       shift and go to state 8
    FOR                            shift and go to state 9
    INCREMENTO                     shift and go to state 10
    DECREMENTO                     shift and go to state 11
    FUNC                           shift and go to state 12
    STRUCT                         shift and go to state 13
    LLAMADA_FUNCION                shift and go to state 14
    RETURN                         shift and go to state 15
    FUNCION_PUSH                   shift and go to state 16
    DECLARACION                    shift and go to state 17
    ASIGNACION                     shift and go to state 18

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> ENTRADAS .
    (3) ENTRADAS -> ENTRADAS . ENTRADA
    (5) ENTRADA -> . IMPRIMIR puntoYcoma
    (6) ENTRADA -> . IF puntoYcoma
    (7) ENTRADA -> . WHILE puntoYcoma
    (8) ENTRADA -> . BREAK
    (9) ENTRADA -> . CONTINUE
    (10) ENTRADA -> . FOR puntoYcoma
    (11) ENTRADA -> . INCREMENTO puntoYcoma
    (12) ENTRADA -> . DECREMENTO puntoYcoma
    (13) ENTRADA -> . FUNC puntoYcoma
    (14) ENTRADA -> . STRUCT puntoYcoma
    (15) ENTRADA -> . LLAMADA_FUNCION puntoYcoma
    (16) ENTRADA -> . RETURN
    (17) ENTRADA -> . FUNCION_PUSH puntoYcoma
    (51) ENTRADA -> . DECLARACION puntoYcoma
    (58) ENTRADA -> . ASIGNACION puntoYcoma
    (63) IMPRIMIR -> . console punto log p_Abre LISTAEXPRESIONES p_Cierra
    (46) IF -> . if p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra COMPLEMENTO_IF
    (47) IF -> . if p_Abre EXPRESION p_Cierra llave_Abre llave_Cierra COMPLEMENTO_IF
    (45) WHILE -> . while p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra
    (41) BREAK -> . break puntoYcoma
    (42) CONTINUE -> . continue puntoYcoma
    (36) FOR -> . for p_Abre DECLARACION puntoYcoma EXPRESION puntoYcoma FORITERADOR p_Cierra llave_Abre ENTRADAS llave_Cierra
    (37) FOR -> . for p_Abre DECLARACION of EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra
    (61) INCREMENTO -> . id incremento
    (62) DECREMENTO -> . id decremento
    (18) FUNC -> . fn id p_Abre PARAMETROS_DECLA_FUNC p_Cierra llave_Abre ENTRADAS llave_Cierra
    (19) FUNC -> . fn id p_Abre p_Cierra llave_Abre ENTRADAS llave_Cierra
    (20) FUNC -> . fn id p_Abre PARAMETROS_DECLA_FUNC p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
    (21) FUNC -> . fn id p_Abre p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
    (31) STRUCT -> . interface id llave_Abre LISTAATRIBUTOS llave_Cierra
    (27) LLAMADA_FUNCION -> . id p_Abre PARAMETROS_LLAMA_FUNC p_Cierra
    (28) LLAMADA_FUNCION -> . id p_Abre p_Cierra
    (43) RETURN -> . return EXPRESION puntoYcoma
    (44) RETURN -> . return puntoYcoma
    (97) FUNCION_PUSH -> . id punto push p_Abre EXPRESION p_Cierra
    (52) DECLARACION -> . let id igual EXPRESION
    (53) DECLARACION -> . let id dosPuntos TIPO igual EXPRESION
    (54) DECLARACION -> . let id
    (55) DECLARACION -> . let id dosPuntos TIPO
    (56) DECLARACION -> . let id dosPuntos TIPO c_Abre c_Cierra igual EXPRESION
    (57) DECLARACION -> . let id dosPuntos TIPO c_Abre c_Cierra
    (59) ASIGNACION -> . id igual EXPRESION
    (60) ASIGNACION -> . id LISTAINDICES igual EXPRESION

    $end            reduce using rule 1 (INICIO -> ENTRADAS .)
    console         shift and go to state 19
    if              shift and go to state 20
    while           shift and go to state 21
    break           shift and go to state 22
    continue        shift and go to state 23
    for             shift and go to state 24
    id              shift and go to state 25
    fn              shift and go to state 26
    interface       shift and go to state 27
    return          shift and go to state 28
    let             shift and go to state 29

    ENTRADA                        shift and go to state 30
    IMPRIMIR                       shift and go to state 4
    IF                             shift and go to state 5
    WHILE                          shift and go to state 6
    BREAK                          shift and go to state 7
    CONTINUE                       shift and go to state 8
    FOR                            shift and go to state 9
    INCREMENTO                     shift and go to state 10
    DECREMENTO                     shift and go to state 11
    FUNC                           shift and go to state 12
    STRUCT                         shift and go to state 13
    LLAMADA_FUNCION                shift and go to state 14
    RETURN                         shift and go to state 15
    FUNCION_PUSH                   shift and go to state 16
    DECLARACION                    shift and go to state 17
    ASIGNACION                     shift and go to state 18

state 3

    (4) ENTRADAS -> ENTRADA .

    console         reduce using rule 4 (ENTRADAS -> ENTRADA .)
    if              reduce using rule 4 (ENTRADAS -> ENTRADA .)
    while           reduce using rule 4 (ENTRADAS -> ENTRADA .)
    break           reduce using rule 4 (ENTRADAS -> ENTRADA .)
    continue        reduce using rule 4 (ENTRADAS -> ENTRADA .)
    for             reduce using rule 4 (ENTRADAS -> ENTRADA .)
    id              reduce using rule 4 (ENTRADAS -> ENTRADA .)
    fn              reduce using rule 4 (ENTRADAS -> ENTRADA .)
    interface       reduce using rule 4 (ENTRADAS -> ENTRADA .)
    return          reduce using rule 4 (ENTRADAS -> ENTRADA .)
    let             reduce using rule 4 (ENTRADAS -> ENTRADA .)
    $end            reduce using rule 4 (ENTRADAS -> ENTRADA .)
    llave_Cierra    reduce using rule 4 (ENTRADAS -> ENTRADA .)


state 4

    (5) ENTRADA -> IMPRIMIR . puntoYcoma

    puntoYcoma      shift and go to state 31


state 5

    (6) ENTRADA -> IF . puntoYcoma

    puntoYcoma      shift and go to state 32


state 6

    (7) ENTRADA -> WHILE . puntoYcoma

    puntoYcoma      shift and go to state 33


state 7

    (8) ENTRADA -> BREAK .

    console         reduce using rule 8 (ENTRADA -> BREAK .)
    if              reduce using rule 8 (ENTRADA -> BREAK .)
    while           reduce using rule 8 (ENTRADA -> BREAK .)
    break           reduce using rule 8 (ENTRADA -> BREAK .)
    continue        reduce using rule 8 (ENTRADA -> BREAK .)
    for             reduce using rule 8 (ENTRADA -> BREAK .)
    id              reduce using rule 8 (ENTRADA -> BREAK .)
    fn              reduce using rule 8 (ENTRADA -> BREAK .)
    interface       reduce using rule 8 (ENTRADA -> BREAK .)
    return          reduce using rule 8 (ENTRADA -> BREAK .)
    let             reduce using rule 8 (ENTRADA -> BREAK .)
    $end            reduce using rule 8 (ENTRADA -> BREAK .)
    llave_Cierra    reduce using rule 8 (ENTRADA -> BREAK .)


state 8

    (9) ENTRADA -> CONTINUE .

    console         reduce using rule 9 (ENTRADA -> CONTINUE .)
    if              reduce using rule 9 (ENTRADA -> CONTINUE .)
    while           reduce using rule 9 (ENTRADA -> CONTINUE .)
    break           reduce using rule 9 (ENTRADA -> CONTINUE .)
    continue        reduce using rule 9 (ENTRADA -> CONTINUE .)
    for             reduce using rule 9 (ENTRADA -> CONTINUE .)
    id              reduce using rule 9 (ENTRADA -> CONTINUE .)
    fn              reduce using rule 9 (ENTRADA -> CONTINUE .)
    interface       reduce using rule 9 (ENTRADA -> CONTINUE .)
    return          reduce using rule 9 (ENTRADA -> CONTINUE .)
    let             reduce using rule 9 (ENTRADA -> CONTINUE .)
    $end            reduce using rule 9 (ENTRADA -> CONTINUE .)
    llave_Cierra    reduce using rule 9 (ENTRADA -> CONTINUE .)


state 9

    (10) ENTRADA -> FOR . puntoYcoma

    puntoYcoma      shift and go to state 34


state 10

    (11) ENTRADA -> INCREMENTO . puntoYcoma

    puntoYcoma      shift and go to state 35


state 11

    (12) ENTRADA -> DECREMENTO . puntoYcoma

    puntoYcoma      shift and go to state 36


state 12

    (13) ENTRADA -> FUNC . puntoYcoma

    puntoYcoma      shift and go to state 37


state 13

    (14) ENTRADA -> STRUCT . puntoYcoma

    puntoYcoma      shift and go to state 38


state 14

    (15) ENTRADA -> LLAMADA_FUNCION . puntoYcoma

    puntoYcoma      shift and go to state 39


state 15

    (16) ENTRADA -> RETURN .

    console         reduce using rule 16 (ENTRADA -> RETURN .)
    if              reduce using rule 16 (ENTRADA -> RETURN .)
    while           reduce using rule 16 (ENTRADA -> RETURN .)
    break           reduce using rule 16 (ENTRADA -> RETURN .)
    continue        reduce using rule 16 (ENTRADA -> RETURN .)
    for             reduce using rule 16 (ENTRADA -> RETURN .)
    id              reduce using rule 16 (ENTRADA -> RETURN .)
    fn              reduce using rule 16 (ENTRADA -> RETURN .)
    interface       reduce using rule 16 (ENTRADA -> RETURN .)
    return          reduce using rule 16 (ENTRADA -> RETURN .)
    let             reduce using rule 16 (ENTRADA -> RETURN .)
    $end            reduce using rule 16 (ENTRADA -> RETURN .)
    llave_Cierra    reduce using rule 16 (ENTRADA -> RETURN .)


state 16

    (17) ENTRADA -> FUNCION_PUSH . puntoYcoma

    puntoYcoma      shift and go to state 40


state 17

    (51) ENTRADA -> DECLARACION . puntoYcoma

    puntoYcoma      shift and go to state 41


state 18

    (58) ENTRADA -> ASIGNACION . puntoYcoma

    puntoYcoma      shift and go to state 42


state 19

    (63) IMPRIMIR -> console . punto log p_Abre LISTAEXPRESIONES p_Cierra

    punto           shift and go to state 43


state 20

    (46) IF -> if . p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra COMPLEMENTO_IF
    (47) IF -> if . p_Abre EXPRESION p_Cierra llave_Abre llave_Cierra COMPLEMENTO_IF

    p_Abre          shift and go to state 44


state 21

    (45) WHILE -> while . p_Abre EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra

    p_Abre          shift and go to state 45


state 22

    (41) BREAK -> break . puntoYcoma

    puntoYcoma      shift and go to state 46


state 23

    (42) CONTINUE -> continue . puntoYcoma

    puntoYcoma      shift and go to state 47


state 24

    (36) FOR -> for . p_Abre DECLARACION puntoYcoma EXPRESION puntoYcoma FORITERADOR p_Cierra llave_Abre ENTRADAS llave_Cierra
    (37) FOR -> for . p_Abre DECLARACION of EXPRESION p_Cierra llave_Abre ENTRADAS llave_Cierra

    p_Abre          shift and go to state 48


state 25

    (61) INCREMENTO -> id . incremento
    (62) DECREMENTO -> id . decremento
    (27) LLAMADA_FUNCION -> id . p_Abre PARAMETROS_LLAMA_FUNC p_Cierra
    (28) LLAMADA_FUNCION -> id . p_Abre p_Cierra
    (97) FUNCION_PUSH -> id . punto push p_Abre EXPRESION p_Cierra
    (59) ASIGNACION -> id . igual EXPRESION
    (60) ASIGNACION -> id . LISTAINDICES igual EXPRESION
    (66) LISTAINDICES -> . LISTAINDICES c_Abre EXPRESION c_Cierra
    (67) LISTAINDICES -> . c_Abre EXPRESION c_Cierra

    incremento      shift and go to state 49
    decremento      shift and go to state 50
    p_Abre          shift and go to state 51
    punto           shift and go to state 52
    igual           shift and go to state 53
    c_Abre          shift and go to state 55

    LISTAINDICES                   shift and go to state 54

state 26

    (18) FUNC -> fn . id p_Abre PARAMETROS_DECLA_FUNC p_Cierra llave_Abre ENTRADAS llave_Cierra
    (19) FUNC -> fn . id p_Abre p_Cierra llave_Abre ENTRADAS llave_Cierra
    (20) FUNC -> fn . id p_Abre PARAMETROS_DECLA_FUNC p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra
    (21) FUNC -> fn . id p_Abre p_Cierra dosPuntos TIPO llave_Abre ENTRADAS llave_Cierra

    id              shift and go to state 56


state 27

    (31) STRUCT -> interface . id llave_Abre LISTAATRIBUTOS llave_Cierra

    id              shift and go to state 57


state 28

    (43) RETURN -> return . EXPRESION puntoYcoma
    (44) RETURN -> return . puntoYcoma
    (26) EXPRESION -> . LLAMADA_FUNCION
    (68) EXPRESION -> . EXPRESION suma EXPRESION
    (69) EXPRESION -> . EXPRESION resta EXPRESION
    (70) EXPRESION -> . EXPRESION multiplicacion EXPRESION
    (71) EXPRESION -> . EXPRESION division EXPRESION
    (72) EXPRESION -> . EXPRESION potencia EXPRESION
    (73) EXPRESION -> . EXPRESION modulo EXPRESION
    (74) EXPRESION -> . resta EXPRESION
    (75) EXPRESION -> . p_Abre EXPRESION p_Cierra
    (76) EXPRESION -> . EXPRESION and EXPRESION
    (77) EXPRESION -> . EXPRESION or EXPRESION
    (78) EXPRESION -> . not EXPRESION
    (79) EXPRESION -> . EXPRESION mayor EXPRESION
    (80) EXPRESION -> . EXPRESION mayorigual EXPRESION
    (81) EXPRESION -> . EXPRESION menor EXPRESION
    (82) EXPRESION -> . EXPRESION menorigual EXPRESION
    (83) EXPRESION -> . EXPRESION igualacion EXPRESION
    (84) EXPRESION -> . EXPRESION diferente EXPRESION
    (85) EXPRESION -> . EXPRESION igualacionNormal EXPRESION
    (86) EXPRESION -> . EXPRESION diferenteNormal EXPRESION
    (87) EXPRESION -> . FUNCION_TOFIXED
    (88) EXPRESION -> . FUNCION_TOEXPONENTIAL
    (89) EXPRESION -> . FUNCION_TOSTRING
    (90) EXPRESION -> . FUNCION_TOLOWERCASE
    (91) EXPRESION -> . FUNCION_TOUPPERCASE
    (92) EXPRESION -> . FUNCION_SPLIT
    (93) EXPRESION -> . FUNCION_CONCAT
    (94) EXPRESION -> . FUNCION_TYPEOF
    (95) EXPRESION -> . FUNCION_PUSH
    (105) EXPRESION -> . cadena
    (106) EXPRESION -> . numero
    (107) EXPRESION -> . true
    (108) EXPRESION -> . false
    (109) EXPRESION -> . null
    (110) EXPRESION -> . id
    (111) EXPRESION -> . length p_Abre EXPRESION p_Cierra
    (112) EXPRESION -> . id LISTAINDICES
    (113) EXPRESION -> . c_Abre LISTAEXPRESIONES c_Cierra
    (114) EXPRESION -> . TIPO p_Abre EXPRESION p_Cierra
    (27) LLAMADA_FUNCION -> . id p_Abre PARAMETROS_LLAMA_FUNC p_Cierra
    (28) LLAMADA_FUNCION -> . id p_Abre p_Cierra
    (96) FUNCION_TOFIXED -> . id punto toFixed p_Abre EXPRESION p_Cierra
    (98) FUNCION_TOEXPONENTIAL -> . id punto toExponential p_Abre EXPRESION p_Cierra
    (99) FUNCION_TOSTRING -> . id punto toString p_Abre p_Cierra
    (100) FUNCION_TOLOWERCASE -> . id punto toLowerCase p_Abre p_Cierra
    (101) FUNCION_TOUPPERCASE -> . id punto toUpperCase p_Abre p_Cierra
    (102) FUNCION_SPLIT -> . id punto split p_Abre EXPRESION p_Cierra
    (103) FUNCION_CONCAT -> . id punto concat p_Abre LISTAEXPRESIONES p_Cierra
    (104) FUNCION_TYPEOF -> . typeof p_Abre EXPRESION p_Cierra
    (97) FUNCION_PUSH -> . id punto push p_Abre EXPRESION p_Cierra
    (115) TIPO -> . number
    (116) TIPO -> . string
    (117) TIPO -> . stringMayus
    (118) TIPO -> . boolean
    (119) TIPO -> . any
